# CTEM

./: .env.example  .gitignore  DOCS.md  Dockerfile  README.md  REQUIREMENTS_AUDIT.md  celery_app.py  check53.py  check53_54.py  check54.py  docker-compose.yml  e2e_seed.py  ieee_report.tex  low_find.py  package-lock.json  package.json  pyproject.toml  pytest.ini  seed_finding.py  seed_finding2.py  seed_finding3.py  seed_finding4.py  seed_low.py  seed_users.py  seed_users2.py  seed_users3.py  seed_users4.py  seed_users5.py
app/: config.py  dependencies.py  main.py
docker/: nginx.conf
k8s/: README.md  api-deployment.yaml  api-hpa.yaml  worker-deployment.yaml  worker-hpa.yaml
migrations/: README  env.py
tests/: test_admin_settings.py  test_agent_factory.py  test_agent_loop.py  test_agent_routes.py  test_app_startup.py  test_approval_flow.py  test_attack_graph.py  test_audit_immutability.py  test_auth_roles.py  test_auth_signup.py  test_auto_validation.py  test_blast_radius.py  test_change_window.py  test_compliance_dedup.py  test_compliance_mapper.py  test_compliance_scoring.py  test_dashboard_shapes.py  test_discover_requirements.py  test_discover_route.py  test_finding_audit.py  test_graphrag.py  test_itsm_service.py  test_kill_switch.py  test_kill_switch_hardened.py  test_llm_config.py  test_llm_router.py  test_load_bulk_insert.py  test_nfr_hardening.py  test_normalizer.py  test_nvd_client.py  test_pt_safety_chain.py  test_remediation_history.py  test_remediation_service.py  test_risk_engine.py  test_roe_service.py  test_route_contracts.py  test_scan_pipeline.py  (+12 more)
(+97 files in other folders)
