[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-ctem"
version = "0.1.0"
description = "ATLAS-CTEM enterprise cybersecurity platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.4",
  "celery[redis]>=5.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==3.2.2",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-json-logger>=2.0.7",
  "httpx>=0.27.0",
  "msgpack>=1.0.8",
  "networkx>=3.3",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["app*", "migrations*"]
